# wasmi-daisy

./: Cargo.toml  README.md  build.sh  example.cpp  info.sh  memory.x  wasmi_daisy.h
src/: lib.rs
